crates/solidity/testing/snapshots/bindings_output/yul/slot_of_public_var_override/generated/0.4.16-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:6:26]
   │
 6 │     uint public override x;
   │                          ┬  
   │                          ╰── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Base {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     function x() public view virtual returns (uint) {}
    │              ┬               ───┬───  
    │              ╰──────────────────────── name: 2
    │                                 │     
    │                                 ╰───── unresolved
    │ 
  5 │ contract Test is Base {
    │          ──┬─    ──┬─  
    │            ╰─────────── name: 3
    │                    │   
    │                    ╰─── ref: 1
  6 │     uint public override x;
    │                 ────┬───  
    │                     ╰───── name: 4
    │ 
  8 │     function test() internal pure {
    │              ──┬─  
    │                ╰─── name: 5
    │ 
 10 │             let a := x.slot
    │                 ┬    ┬ ──┬─  
    │                 ╰──────────── name: 6
    │                      │   │   
    │                      ╰─────── unresolved
    │                          │   
    │                          ╰─── ref: built-in
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │     ╭─▶ contract Base {
  2 │     │       function x() public view virtual returns (uint) {}
    │     │   ───────────────────────────┬───────────────────────────  
    │     │                              ╰───────────────────────────── definiens: 2
  3 │ │   ├─▶ }
    │ │   │       
    │ │   ╰─────── definiens: 1
  4 │ ╭─────▶ 
    ┆ ┆       
  6 │ │ │         uint public override x;
    │ │ │     ──────────────┬─────────────  
    │ │ │                   ╰─────────────── definiens: 4
  7 │ │ ╭───▶ 
    ┆ ┆ ┆     
 10 │ │ │                 let a := x.slot
    │ │ │                     ┬  
    │ │ │                     ╰── definiens: 6
    ┆ ┆ ┆     
 12 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 5
 13 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 3
────╯
